CREATE TYPE road_accidents.address AS (
    city text_notnull, 
    street text_notnull, 
    house int_notnull
);
