CREATE TYPE road_accidents.light AS enum ('DayLight', 'DarknessWithLights', 'Twilight', 'DarknessNoLights');
